tests/negative_tests/semantic_errors/wrong_return_type_narrow.c
// INVALID - Type Error: return type narrowing
// Expected: "Type mismatch in return statement"
float getNumber() {
    int x;
    x = 5;
    return x;  // ERROR: returning int from float function (narrowing not allowed)
}
